# platform_development

./: .gitignore  Android.bp  CleanSpec.mk  METADATA  OWNERS  PREUPLOAD.cfg  README.md  rustfmt.toml
apps/BluetoothDebug/: Android.bp  Android.mk  AndroidManifest.xml
apps/BugReportSender/: Android.mk  AndroidManifest.xml
apps/DumpViewer/: Android.mk  (+2 more)
docs/: Android.mk  SDK_RELEASE_NOTES  howto_SDK_git_cygwin.txt  howto_build_SDK.txt  howto_use_cupcake_sdk.txt
gki/: Android.bp  Android.mk  OWNERS  run-script-test.sh  script_test.xml
gsi/: Android.mk  OWNERS  bld-gki.sh  gki_package.mk  gsi-pubsign-release.sh
host/: Android.mk
ide/clion/: CMakeLists.txt
ide/clion/frameworks/base/: CMakeLists.txt
ide/clion/frameworks/base/libs/hwui/: CMakeLists.txt
ide/clion/frameworks/base/tools/aapt2/: CMakeLists.txt
ide/clion/frameworks/ml/: CMakeLists.txt
ide/clion/frameworks/native/: CMakeLists.txt
ide/clion/frameworks/native/services/surfaceflinger/: CMakeLists.txt
ide/clion/hardware/interfaces/graphics/: CMakeLists.txt
ide/clion/test/vts-testcase/: CMakeLists.txt
multitree/: OWNERS  build_vendor.sh  find_build_id.py
ndk/: .gitignore  Android.bp  Android.mk  GNUmakefile  OWNERS  README.TXT  annotate_version_script.py  build_symbol_db.py  fixup_version_script.py  pylintrc  unify_all.py
pdk/: Pdk.mk  README  micro-httpd.py
python-packages/: Android.bp  OWNERS
python-packages/fetchartifact/: OWNERS  README.md  pyproject.toml
python-packages/fetchartifact/fetchartifact/: __init__.py
python-packages/fetchartifact/tests/: __init__.py  test_fetchartifact.py
samples/: README  samples_source.prop_template  source.properties
scripts/: Android.bp  OWNERS  TEST_MAPPING  acov  acov-llvm.py  aday  add-accounts-sdk  add3prf.py  add3prf_test.py  architecture.py  bash_util.bash  battery_simulator.py  boardconfig_usage_analysis.py  cargo2android.py  cargo2rulesmk.py  codegen  combine_sdks.sh  compare-installed-size.py  disassemble_test.py  disassemble_test_input.py  disassemble_tombstone.py  divide_and_compress.py  divide_and_compress_constants.py  example_crashes.py  gdbclient  gdbclient.py  gdbclient_test.py  get_rust_pkg.py  lldbclient.py  llvm-gcov  native_heapdump_viewer-tests.xml  native_heapdump_viewer.py  native_heapdump_viewer_tests.py  pid  reverse_tether.sh  runahat  stack  stack_core.py  stacks  stacktrace  (+4 more)
sdk/: Android.bp  OWNERS  api-versions.xml  build_tools_source.prop_template  build_tools_source.properties  compatibility_README.txt  compatibility_source.properties  doc_source.properties  images_armeabi-v7a_source.prop_template  images_armeabi-v7a_source.properties  images_armeabi_source.prop_template  images_armeabi_source.properties  images_mips_source.prop_template  images_x86_source.prop_template  images_x86_source.properties  llvm-rs-cc.txt  plat_tools_source.prop_template  plat_tools_source.properties  platform_source.prop_template  platform_source.properties  sdk.properties  sdk_files_NOTICE.txt  source_source.prop_template  source_source.properties  support_source.prop_template  support_source.properties  usbdriver_source.properties
sys-img/: OWNERS  advancedFeatures.ini  advancedFeatures.ini.arm  images_arm64-v8a_source.prop_template  images_armeabi-v7a_hardware.ini  images_armeabi-v7a_source.prop_template  images_armeabi_source.prop_template  images_atd_source.prop_template  images_mips64_source.prop_template  images_mips_source.prop_template  images_x86_64_source.prop_template  images_x86_source.prop_template
testrunner/: .gitignore  Android.mk  __init__.py  adb_interface.py  am_instrument_parser.py  android_build.py  android_manifest.py  android_mk.py  coverage.py  coverage_targets.py  coverage_targets.xml  create_test.py  errors.py  logger.py  make_tree.py  run_command.py  runtest.py  test_defs.py  test_defs.xml  test_defs.xsd  tests.xml
tools/: Android.bp  make_key  monkey  runtest
tools/external_crates/crate_health/: Cargo.toml  build.rs
tools/external_crates/crate_health/src/: android_bp.rs  crate_collection.rs  crate_type.rs  crates_io.rs  google_metadata.rs  lib.rs  license.rs  main.rs  managed_crate.rs  managed_repo.rs  migration.rs  name_and_version.rs  name_and_version_map.rs  pseudo_crate.rs  repo_path.rs  reports.rs  version_match.rs
tools/external_crates/crate_health/src/templates/: Cargo.toml.template  crate_health.html.template  migration_report.html.template  size_report.html.template  table.html.template
tools/external_crates/crate_tool/: Cargo.toml
tools/external_crates/crate_tool/src/: android_bp.rs  crate_collection.rs  crate_type.rs  crates_io.rs  lib.rs  license.rs  main.rs  managed_crate.rs  managed_repo.rs  patch.rs  pseudo_crate.rs  upgradable.rs
tools/external_crates/crate_tool/src/testdata/: ahash.footer  ahash.header  ahash.patch  crossbeam-utils.patch  mls_rs_core.header  mls_rs_core.patch
tools/external_crates/license_checker/: Android.bp  Cargo.toml
tools/external_crates/license_checker/src/: content_checker.rs  expression_parser.rs  file_classifier.rs  file_name_checker.rs  lib.rs  license_data.rs  license_data_tests.rs  license_file_finder.rs  license_terms.rs  licenses.rs  parsed_license_data.rs  util.rs
tools/external_crates/license_checker/src/file_classifier/: content_classifier.rs  inexact_name_classifier.rs  mod.rs  name_classifier.rs
tools/external_crates/license_checker/src/file_classifier/licenses/: ISC.txt  MIT-0.txt  MPL-2.0.txt  Unicode-3.0.txt
tools/external_crates/license_checker/src/file_classifier/testdata/: LICENSE-MIT-aarch64-paging.txt
tools/external_crates/license_checker/src/licenses/: Apache-2.0.txt  BSD-2-Clause.txt  BSD-3-Clause.txt  ISC.txt  MIT.txt  MPL-2.0-source-code-form.txt  NCSA.txt  OpenSSL.txt  Unicode-DFS-2016.txt  Unlicense.txt  Zlib.txt
tools/external_crates/license_checker/src/testdata/: BSD-3-Clause-bindgen.txt
treble/: OWNERS  build_with_artifact.sh  combined_build_test.sh  compare_bp_system_image.sh  compare_build_trace.py  read_build_trace_gz.py
vendor_snapshot/: OWNERS  modify_bp_for_hwasan.sh  update.py
vndk/: Android.bp  OWNERS
(+12013 files in other folders)
