[package]
name = "crate_health"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo = "0.76"
chrono = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
glob = "0.3"
itertools = "0.11"
num_cpus = "1"
protobuf = "3"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
threadpool = "1"
tinytemplate = "1.2"
walkdir = "2"
whoami = "1"
crate_health_proc_macros = { path = "../crate_health_proc_macros" }

[build-dependencies]
protobuf-codegen = "3"
protobuf-parse = "3"

[dev-dependencies]
tempfile = "3"
