[package]
name = "crate_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
cargo_metadata = "0.19"
cfg-expr = "0.17"
chrono = "0.4"
clap = { version = "4.4.6", features = ["derive"] }
crates-index = "3.2.0"
glob = "0.3"
itertools = "0.11"
protobuf = "3"
semver = "1"
# TODO: Unpin once https://github.com/serde-rs/serde/issues/2844 is resolved.
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "1"
spdx = "0.10"
ureq = "3"
thiserror = "1"
walkdir = "2"
checksum = { path = "../checksum" }
crate_config = { path = "../crate_config" }
crates_io_util = { path = "../crates_io_util" }
google_metadata = { path = "../google_metadata"}
license_checker = { path = "../license_checker" }
name_and_version = { path = "../name_and_version" }
repo_config = { path = "../repo_config" }
rooted_path = { path = "../rooted_path" }
test_mapping = { path = "../test_mapping" }

[build-dependencies]
protobuf-codegen = "3"
protobuf-parse = "3"

[dev-dependencies]
tempfile = "3"
