[package]
name = "license_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3"
itertools = { version = "0.11", optional = true }
spdx = "0.10"
textdistance = { version = "1.1.1", optional = true }
thiserror = "1.0"

[features]
fuzzy_content_match = ["dep:textdistance", "dep:itertools"]