cmake_minimum_required(VERSION 3.6)
project(native)
add_subdirectory(libs/gui/libgui-arm64-android)
add_subdirectory(libs/ui/libui-arm64-android)
add_subdirectory(services/surfaceflinger/libsurfaceflinger-arm64-android)
add_subdirectory(services/surfaceflinger/surfaceflinger-arm64-android)
add_subdirectory(services/surfaceflinger/tests/SurfaceFlinger_test-arm64-android)
add_subdirectory(services/surfaceflinger/tests/unittests/libsurfaceflinger_unittest-arm64-android)
