cmake_minimum_required(VERSION 3.6)
project(native)
add_subdirectory(libs/gui/libgui-arm64-android)
add_subdirectory(libs/ui/libui-arm64-android)
add_subdirectory(services/surfaceflinger/surfaceflinger-arm64-android)
add_subdirectory(services/surfaceflinger/CompositionEngine/libcompositionengine_mocks-arm64-android)
add_subdirectory(services/surfaceflinger/CompositionEngine/libcompositionengine_test-arm64-android)
add_subdirectory(services/surfaceflinger/CompositionEngine/libcompositionengine-arm64-android)
add_subdirectory(services/surfaceflinger/TimeStats/timestatsproto/libtimestats_proto-arm64-android)
add_subdirectory(services/surfaceflinger/TimeStats/libtimestats-arm64-android)
add_subdirectory(services/surfaceflinger/libsurfaceflinger-arm64-android)
add_subdirectory(services/surfaceflinger/layerproto/liblayers_proto-arm64-android)
add_subdirectory(services/surfaceflinger/tests/IPC_test-arm64-android)
add_subdirectory(services/surfaceflinger/tests/fakehwc/sffakehwc_test-arm64-android)
add_subdirectory(services/surfaceflinger/tests/SurfaceFlinger_test-arm64-android)
add_subdirectory(services/surfaceflinger/tests/vsync/test-vsync-events-arm64-android)
add_subdirectory(services/surfaceflinger/tests/waitforvsync/test-waitforvsync-arm64-android)
add_subdirectory(services/surfaceflinger/tests/unittests/libsurfaceflinger_unittest-arm64-android)
add_subdirectory(services/surfaceflinger/libSurfaceFlingerProp-arm64-android)
add_subdirectory(services/surfaceflinger/sysprop/libSurfaceFlingerProperties-arm64-android)
