cmake_minimum_required(VERSION 3.6)
project(vts-testcase)

add_subdirectory(kernel/api/tun/vts_kernel_tun_test-arm-android)
add_subdirectory(kernel/api/bpf_native_test/vts_test_binary_bpf_module-arm-android)
add_subdirectory(kernel/api/qtaguid/vts_test_binary_qtaguid_module-arm-android)
add_subdirectory(kernel/toolchain/vts_kernel_toolchain-arm-android)
add_subdirectory(kernel/bow/vts_test_binary_bow_module-arm-android)
add_subdirectory(kernel/loop/vts_kernel_loopconfig_test-arm-android)
add_subdirectory(security/selinux/policy/VtsSecuritySelinuxPolicyHostTest-x86_64-linux_glibc)
add_subdirectory(security/avb/VtsSecurityAvbTest-arm-android)
add_subdirectory(fuzz/iface_fuzzer/vts_proto_fuzzer-arm-android)
add_subdirectory(fuzz/iface_fuzzer/libvts_proto_fuzzer-arm-android)
add_subdirectory(hal/treble/vintf/vts_treble_vintf_test_all-arm-android)
add_subdirectory(hal/treble/vintf/vts_treble_vintf_vendor_test-arm-android)
add_subdirectory(hal/treble/vintf/vts_treble_vintf_framework_test-arm-android)
add_subdirectory(hal/treble/vintf/vts_treble_vintf_test_o_mr1-arm-android)
add_subdirectory(hal/thermal/V1_0/target_stress/thermal_hidl_stress_test-arm-android)
